<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentFAQ"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9E7CB"
    tools:context="com.example.happytree.FAQs">


    <TextView
        android:id="@+id/txtFaqs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat"
        android:text="Frequently Asked Questions"
        android:textColor="@color/colorSecondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colorSecondary"
        app:cardCornerRadius="25dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txtFaq1t"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/txtQ1"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFaq1t2"
                android:layout_width="315dp"
                android:layout_height="63dp"
                android:layout_below="@+id/textAns1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/txtQ2"
                android:textColor="@color/colorPrimaryVariant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textAns1"
                android:layout_width="304dp"
                android:layout_height="76dp"
                android:layout_below="@+id/txtFaq1t"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lato"
                android:text="@string/textAns1"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAns"
                android:layout_width="306dp"
                android:layout_height="77dp"
                android:layout_below="@+id/txtFaq1t2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lato"
                android:text="@string/textAns2"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>